--- a/login.html
+++ b/login.html
@@ -4,10 +4,10 @@
 	</head>
 	<body>
 		<label>username</label>
-		<input type="text" required></input>
+		<input type="text" required placeholder = "username"></input>
 <br></br>
 		<label>password</label>
-		<input type="password" required></input>
+		<input type="password" required placeholder = "password"></input>
 <br></br>
 		<input type="submit"></input>
 	</body>
