added mobile number field

--- a/register.html
+++ b/register.html
@@ -12,6 +12,9 @@
                 <label>emailid</label>
 		<form><input type="text" required></input></form>
 <br></br>
+                 <label>mobile number</label>
+		<form><input type="number" required></input></form>
+<br></br>
                  <label>password</label>
 		<form><input type="password" required></input></form>
 <br></br>
